Documentation edits made through Mintlify web editor

--- a/hosting.mdx
+++ b/hosting.mdx
@@ -25,8 +25,8 @@ A common question we get from developers is whether they should use our official
 | Install & setup              |   | ✅                          |   | Manual                     |
 | Weekly updates               |   | ✅                          |   | Manual                     |
 | Server maintenance & updates |   | ✅                          |   | Manual                     |
-| SSL Certificate              |   | ✅                          |   | Manual                     |
-| 24/7 on-call teams           |   | ✅                          |   | ❌                          |
+| SSL certificate              |   | ✅                          |   | Manual                     |
+| 24/7 on-call team            |   | ✅                          |   | ❌                          |
 | Enterprise-grade security    |   | ✅                          |   | ❌                          |
 | Ghost product support        |   | Email                      |   | Forum                      |
 | Custom edge routing policies |   | ❌                          |   | ✅                          |
