Documentation edits made through Mintlify web editor

--- a/hosting.mdx
+++ b/hosting.mdx
@@ -12,27 +12,27 @@ Ghost is open source software, and can be installed and maintained relatively ea
 
 A common question we get from developers is whether they should use our official platform, or host the codebase on their own server independently. Deciding which option is best for you comes with some nuance, so below is a breakdown of the differences to help you decide what will fit your needs best.
 
-|                                  |                   | Ghost(Pro)                 |                   | Self-Hosting               |
-| -------------------------------- | ----------------- | -------------------------: | ----------------- | -------------------------: |
-| **Product features**             | ```           ``` | Identical                  | ```           ``` | Identical                  |
-| **Base hosting cost**            |                   | From **\$15**/mo           |                   | From **\$8**/mo            |
-| **Global CDN & WAF**             |                   | Included                   |                   | From **\$50**/mo           |
-| **Email newsletter delivery**    |                   | Included                   |                   | From **\$15**/mo           |
-| **Analytics platform**           |                   | Included                   |                   | From **\$10**/mo           |
-| **Full site backups**            |                   | Included                   |                   | From **\$5**/mo            |
-| **Image editor**                 |                   | Included                   |                   | From **\$12**/mo           |
-| **Payment processing fees**      |                   | 0%                         |                   | 0%                         |
-| **Install & setup**              |                   | ✅                          |                   | Manual                     |
-| **Weekly updates**               |                   | ✅                          |                   | Manual                     |
-| **Server maintenance & updates** |                   | ✅                          |                   | Manual                     |
-| **SSL certificate**              |                   | ✅                          |                   | Manual                     |
-| **24/7 on-call team**            |                   | ✅                          |                   | ❌                          |
-| **Enterprise-grade security**    |                   | ✅                          |                   | ❌                          |
-| **Ghost product support**        |                   | Email                      |                   | Forum                      |
-| **Custom edge routing policies** |                   | ❌                          |                   | ✅                          |
-| **Direct SSH & DB access**       |                   | ❌                          |                   | ✅                          |
-| **Ability to modify core**       |                   | ❌                          |                   | ✅                          |
-| **Where the money goes**         |                   | New features<br />in Ghost |                   | Third-party<br />companies |
+|                                  | ——— | Ghost(Pro)                 | ——— | Self-Hosting               |
+| -------------------------------- | :-- | -------------------------: | --- | -------------------------: |
+| **Product features**             |     | Identical                  |     | Identical                  |
+| **Base hosting cost**            |     | From **\$15**/mo           |     | From **\$8**/mo            |
+| **Global CDN & WAF**             |     | Included                   |     | From **\$50**/mo           |
+| **Email newsletter delivery**    |     | Included                   |     | From **\$15**/mo           |
+| **Analytics platform**           |     | Included                   |     | From **\$10**/mo           |
+| **Full site backups**            |     | Included                   |     | From **\$5**/mo            |
+| **Image editor**                 |     | Included                   |     | From **\$12**/mo           |
+| **Payment processing fees**      |     | 0%                         |     | 0%                         |
+| **Install & setup**              |     | ✅                          |     | Manual                     |
+| **Weekly updates**               |     | ✅                          |     | Manual                     |
+| **Server maintenance & updates** |     | ✅                          |     | Manual                     |
+| **SSL certificate**              |     | ✅                          |     | Manual                     |
+| **24/7 on-call team**            |     | ✅                          |     | ❌                          |
+| **Enterprise-grade security**    |     | ✅                          |     | ❌                          |
+| **Ghost product support**        |     | Email                      |     | Forum                      |
+| **Custom edge routing policies** |     | ❌                          |     | ✅                          |
+| **Direct SSH & DB access**       |     | ❌                          |     | ✅                          |
+| **Ability to modify core**       |     | ❌                          |     | ✅                          |
+| **Where the money goes**         |     | New features<br />in Ghost |     | Third-party<br />companies |
 
 ### Which option is best for me?
 
