Documentation edits made through Mintlify web editor

--- a/hosting.mdx
+++ b/hosting.mdx
@@ -8,9 +8,13 @@ description: "A short guide to running Ghost in a production environment and set
 
 Ghost is open source software, and can be installed and maintained relatively easily on just about any VPS hosting provider. Additionally, we run an official PaaS for Ghost called [Ghost(Pro)](https://ghost.org/pricing/), where you can have a fully managed instance set up in a couple of clicks. All revenue from Ghost(Pro) goes toward funding the future development of Ghost itself, so by using our official hosting you’ll also be funding developers to continue to improve the core product for you.
 
-## Ghost(Pro) vs Self-hosting
+## Ghost(Pro) vs self-hosting
 
 A common question we get from developers is whether they should use our official platform, or host the codebase on their own server independently. Deciding which option is best for you comes with some nuance, so below is a breakdown of the differences to help you decide what will fit your needs best.
+
+<style>
+  strong {front-weight:bold;}
+</style>
 
 |                                  | ——— | Ghost(Pro)                 | ——— | Self-Hosting               |
 | -------------------------------- | :-- | -------------------------: | --- | -------------------------: |
