Documentation edits made through Mintlify web editor

--- a/hosting.mdx
+++ b/hosting.mdx
@@ -36,6 +36,14 @@ A common question we get from developers is whether they should use our official
 
 ### Which option is best for me?
 
+<Card title="Self-hosting" icon="server" cta="Self-hosting guide">
+  Self-hosting is the best choice for teams who are comfortable managing servers, and want full control over their environment. There’s more complexity involved, and you'll have to pay for your own email delivery, analytics and CDN — but ultimately there's more flexibility around exactly how the software runs. For heavy users of Ghost, self-hosting generally works out to be more expensive vs Ghost(Pro), but for lightweight blogs it can be cheaper.
+</Card>
+
+<Card title="Ghost(Pro)" icon="sparkles" href="https://ghost.org/pricing/" cta="See plans & pricing">
+  Ghost(Pro) is the best choice for most people who are focused on using the Ghost software, and don’t want to spend time managing servers. Setting up a new Ghost site takes around 20 seconds, and after that all weekly updates, backups, security and performance are managed for you. If your site ever goes down, our team gets woken up while you sleep peacefully. In most cases Ghost(Pro) ends up being lower cost than self-hosting once you add up the cost of the different service providers.
+</Card>
+
 **Self-hosting** is the best choice for teams who are comfortable managing servers, databases and Node.js apps who want full control over their environment. There’s more complexity involved, and you'll have to pay for your own email delivery, analytics and CDN — but ultimately there's more flexibility around exactly how the software runs. For heavy users of Ghost, self-hosting generally works out to be more expensive vs Ghost(Pro), but for lightweight blogs it can be cheaper.
 
 [See self-hosting guides & instructions →](/install/)
