--- a/hosting.mdx
+++ b/hosting.mdx
@@ -42,6 +42,7 @@ A common question we get from developers is whether they should use our official
   For heavy users of Ghost, self-hosting generally works out to be more expensive vs Ghost(Pro), but for lightweight blogs it can be cheaper.
 </Card>
 
+vs
 
 <Card title="Ghost(Pro)" icon="sparkles" color="#006bc2" href="https://ghost.org/pricing/" cta="See plans & pricing">
   Best for most people who are focused on using the Ghost software, and don’t want to spend time managing servers. Setting up a new Ghost site takes around 20 seconds. After that, all weekly updates, backups, security and performance are managed for you. 
@@ -49,35 +50,27 @@ A common question we get from developers is whether they should use our official
   If your site ever goes down, our team gets woken up while you sleep peacefully. In most cases Ghost(Pro) ends up being lower cost than self-hosting once you add up the cost of the different service providers.
 </Card>
 
-**Self-hosting** is the best choice for teams who are comfortable managing servers, databases and Node.js apps who want full control over their environment. There’s more complexity involved, and you'll have to pay for your own email delivery, analytics and CDN — but ultimately there's more flexibility around exactly how the software runs. For heavy users of Ghost, self-hosting generally works out to be more expensive vs Ghost(Pro), but for lightweight blogs it can be cheaper.
-
-[See self-hosting guides & instructions →](/install/)
-
-**Ghost(Pro)** is the best choice for most people who are focused on using the Ghost software, and don’t want to spend time managing servers. Setting up a new Ghost site takes around 20 seconds, and after that all weekly updates, backups, security and performance are managed for you. If your site ever goes down, our team gets woken up while you sleep peacefully. In most cases Ghost(Pro) ends up being lower cost than self-hosting once you add up the cost of the different service providers.
-
-[See Ghost(Pro) pricing & plans →](https://ghost.org/pricing/)
-
-**TLDR:** If you want the easiest, cheapest option: Ghost(Pro) is probably your best bet. If you have a technical team and you want maximum control and flexibility, you’ll get more out of self-hosting.
+**TLDR:** If you're unsure: Ghost(Pro) is probably your best bet. If you have a technical team and you want maximum control and flexibility, you’ll get more out of self-hosting.
 
 ---
 
 ## Self-hosting details & configuration
 
-Ghost has a [small team](/product/), so we optimize the software for a single, narrow, well defined stack which is heavily tested. This is the same stack that we use on Ghost(Pro), so we can generally guarantee that it’s going to work well. Ghost _can_ also run successfully with different operating systems, databases and web servers, but these are not officially supported or widely adopted, so your mileage may (will) vary.
+Ghost has a [small team](/product/), so we optimize the software for a single, narrow, well-defined stack which is heavily tested. This is the same stack that we use on Ghost(Pro), so we can generally guarantee that it’s going to work well. 
+
+Ghost _can_ also run successfully with different operating systems, databases and web servers, but these are not officially supported or widely adopted, so your mileage may (will) vary.
 
 Our officially supported and recommended stack is as follows:
 
-- **Ubuntu 16.04**, **18.04**, **20.04** or **22.04**
+- **Ubuntu 22.04**
 - MySQL 8.0
 - NGINX
 - Systemd
-- [Recommended Node version](/faq/node-versions/) installed via NodeSource
+- [Recommended Node version](/faq/node-versions/)
 - A server with at least 1GB memory
 - A non-root user for running `ghost` commands
 
 [See self-hosting guides & instructions →](/install/)
-
----
 
 ### Server hardening
 
@@ -91,10 +84,10 @@ After setting up a fresh Ubuntu install in production, it’s worth considering 
 
 ### Optimizing for scale
 
-The correct way to scale Ghost is by adding a CDN and/or caching layer in front of your Ghost instance. **Clustering or sharding is not supported in any way.** Every day 2-5 of the top stories on Hacker News are published with Ghost, and to the best of our knowledge no Ghost site has ever fallen over as a result of a traffic spike. Minimal, sensible caching is more than enough.
+The correct way to scale Ghost is by adding a CDN and caching layer in front of your Ghost instance. **Clustering or sharding is not supported.** Ghost easily scales to billions of requests per month as long as it has a solid cache.
 
 ### Staying up to date
 
-Whenever running a public-facing production web server it’s **critically important** to keep all software up to date. If you don’t keep everything up to date, you place your site and your server at risk of numerous potential exploits and hacks.
+Whenever running a public-facing production web server it’s critically important to keep all software up to date. If you don’t keep everything up to date, you place your site and your server at risk of numerous potential exploits and hacks.
 
 If you can’t manage these things yourself, ensure that a systems administrator on your team is able to keep everything updated on your behalf.
