--- a/hosting.mdx
+++ b/hosting.mdx
@@ -42,15 +42,13 @@ A common question we get from developers is whether they should use our official
   For heavy users of Ghost, self-hosting generally works out to be more expensive vs Ghost(Pro), but for lightweight blogs it can be cheaper.
 </Card>
 
-vs
-
 <Card title="Ghost(Pro)" icon="sparkles" color="#006bc2" href="https://ghost.org/pricing/" cta="See plans & pricing">
   Best for most people who are focused on using the Ghost software, and don’t want to spend time managing servers. Setting up a new Ghost site takes around 20 seconds. After that, all weekly updates, backups, security and performance are managed for you. 
 
   If your site ever goes down, our team gets woken up while you sleep peacefully. In most cases Ghost(Pro) ends up being lower cost than self-hosting once you add up the cost of the different service providers.
 </Card>
 
-**TLDR:** If you're unsure: Ghost(Pro) is probably your best bet. If you have a technical team and you want maximum control and flexibility, you’ll get more out of self-hosting.
+**TLDR:** If you're unsure: Ghost(Pro) is probably your best bet. If you have a technical team and you want maximum control and flexibility, you may get more out of self-hosting.
 
 ---
 
