Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,8 +3,6 @@ title: "Introduction"
 description: "Ghost is an open source, professional publishing platform built on a modern Node.js technology stack — designed for teams who need power, flexibility and performance."
 ---
 
----
-
 Hitting the right balance of needs has led Ghost to be used in production by organisations including Apple, Sky News, DuckDuckGo, Mozilla, Kickstarter, Square, Cloudflare, Tinder, the Bitcoin Foundation and [many more](https://ghost.org/explore/).
 
 Every day Ghost powers some of the most-read stories on the internet, serving hundreds of millions of requests across tens of thousands of sites.
@@ -13,27 +11,24 @@ Every day Ghost powers some of the most-read stories on the internet, serving hu
 
 The first question most people have is, of course, how is Ghost different from everything else out there? Here’s a table to give you a quick summary:
 
-|                                                              | Ghost (That's us\!) | Open platforms (eg. WordPress) | Closed platforms (eg. Substack) |
-| ------------------------------------------------------------ | ------------------- | ------------------------------ | ------------------------------- |
-| 🏎 Exceptionally fast                                        | ✅                   | ❌                              | ✅                               |
-| 🔒 Reliably secure                                           | ✅                   | ❌                              | ✅                               |
-| 🎨 Great design                                              | ✅                   | ❌                              | ✅                               |
-| 👩🏼🚀 Modern technology                                     | ✅                   | ❌                              | ✅                               |
-| ♻️ Open Source                                               | ✅                   | ✅                              | ❌                               |
-| 🏰 Own your brand\+data                                      | ✅                   | ✅                              | ❌                               |
-| 🌍 Use a custom domain                                       | ✅                   | ✅                              | ❌                               |
-| 🖼 Control your site design                                  | ✅                   | ✅                              | ❌                               |
-| 🌱 Censorship-free                                           | ✅                   | ✅                              | ❌                               |
-| ⭐️ Built-in SEO control                                      | ✅                   | ❌                              | ❌                               |
-| 🚀 Native REST API                                           | ✅                   | ❌                              | ❌                               |
-| 🛠 Comprehensive SDK                                         | ✅                   | ❌                              | ❌                               |
-| 🛒 Built-in membership & subscription commerce features      | ✅                   | ❌                              | ❌                               |
-| 🤝 Works with any front-end or static site framework         | ✅                   | ❌                              | ❌                               |
-| ❤️ Non-profit organisation with a sustainable business model | ✅                   | ❌                              | ❌                               |
+|                                                              | Ghost <br />(That's us\!) | Open platforms <br />(eg. WordPress) | Closed platforms <br />(eg. Substack) |
+| ------------------------------------------------------------ | ------------------------- | ------------------------------------ | ------------------------------------- |
+| 🏎 Exceptionally fast                                        | ✅                         | ❌                                    | ✅                                     |
+| 🔒 Reliably secure                                           | ✅                         | ❌                                    | ✅                                     |
+| 🎨 Great design                                              | ✅                         | ❌                                    | ✅                                     |
+| 🚀 Modern technology                                         | ✅                         | ❌                                    | ✅                                     |
+| 💌 Newsletters built-in                                      | ✅                         | ❌                                    | ✅                                     |
+| 🛒 Memberships & paid subscriptions                          | ✅                         | ❌                                    | ✅                                     |
+| ♻️ Open Source                                               | ✅                         | ✅                                    | ❌                                     |
+| 🏰 Own your brand\+data                                      | ✅                         | ✅                                    | ❌                                     |
+| 🌍 Use a custom domain                                       | ✅                         | ✅                                    | ❌                                     |
+| 🖼 Control your site design                                  | ✅                         | ✅                                    | ❌                                     |
+| 💸 0% transaction fees on payments                           | ✅                         | ❌                                    | ❌                                     |
+| ⭐️ Built-in SEO features                                     | ✅                         | ❌                                    | ❌                                     |
+| 🚀 Native REST API                                           | ✅                         | ❌                                    | ❌                                     |
+| ❤️ Non-profit organisation with a sustainable business model | ✅                         | ❌                                    | ❌                                     |
 
 **In short:** Other open platforms are generally old, slow and bloated, while other closed platforms give you absolutely no control or ownership of your content. Ghost provides the best of both worlds, and more.
-
-Still after a more detailed comparison? We’ve got some in-depth articles comparing Ghost to [WordPress](https://ghost.org/vs/wordpress/), [Medium](https://ghost.org/vs/medium/) and [Tumblr](https://ghost.org/vs/tumblr/).
 
 ## Background
 
