Updated docker prerequisite to exact version
ref https://docs.docker.com/engine/release-notes/20.10/#201013
- 20.10.13 is the first version that bundles compose v2 by default
- our tooling assumes v2 as it uses `docker compose` over `docker-compose`

--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -15,13 +15,12 @@ So that we can continue adding advanced features to Ghost without creating bloat
 Using Docker and Docker compose takes all the pain out of managing different services and their dependencies, meaning we can keep Ghost's architecture simple
 without passing on complexity to our self-hosting community. All services are Open Source and can be self-hosted.
 
-## Pre-requisites
+## Prerequisites
 - A Linux-based server (E.g. DigitalOcean 2GB/1CPU droplet)
-- Docker 20.10.0 or higher installed (See: [docker install guide](https://docs.docker.com/engine/install/))
+- Docker 20.10.13 or higher installed (See: [docker install guide](https://docs.docker.com/engine/install/))
 - A domain name with a DNS **A-Record** pointing to the server’s IP address
 - An SMTP email service for transactional mail (See: [email config docs](/config/#mail))
 - (Optional) A [Tinybird](https://www.tinybird.co/) account for web analytics
-
 
 ---
 
@@ -233,7 +232,7 @@ The migration assistant performs the following actions:
 
 ### Prerequisites
 - A Ghost-CLI install that you'd like to migrate
-- Docker 20.10.0 or higher installed (See: [docker install guide](https://docs.docker.com/engine/install/))
+- Docker 20.10.13 or higher installed (See: [docker install guide](https://docs.docker.com/engine/install/))
 - A domain name with a DNS **A-Record** pointing to the server’s IP address
 - An SMTP email service for transactional mail (See: [email config docs](/config/#mail))
 - (Optional) A [Tinybird](https://www.tinybird.co/) account for web analytics
