Updated absolute urls
- these were created in the mintlify editor but are inconsistent

--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -19,8 +19,8 @@ The Docker tooling will setup and run the usual Ghost service, along with Caddy 
 
 There are two pathways:
 
-1. [A new install](https://docs.ghost.org/install/docker#install-ghost)
-2. [Migrating an existing Ghost-CLI site](https://docs.ghost.org/install/docker#migrating-a-ghost-cli-install)
+1. [A new install](/install/docker#install-ghost)
+2. [Migrating an existing Ghost-CLI site](/install/docker#migrating-a-ghost-cli-install)
 
 ---
 
